# redloop

./: .gitignore  CHANGELOG.md  README.en.md  README.md  pyproject.toml  redloop.toml
.github/workflows/: ci.yml  demo.yml  release.yml
docs/: demo.tape
examples/: basic_usage.py
redloop/: __init__.py  attacker.py  cli.py  config.py  harden.py  replay.py  target.py
redloop/presets/: __init__.py  demo.py
tests/: test_harden.py  test_replay.py  test_target.py
web/: site.json
